adding two problems

--- a/week2/week2/week2.vcxproj
+++ b/week2/week2/week2.vcxproj
@@ -127,6 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ContainerWithMostWater.cpp" />
+    <ClCompile Include="MajorityElement.cpp" />
     <ClCompile Include="MoveZeros.cpp" />
     <ClCompile Include="NumberOfIslands.cpp" />
     <ClCompile Include="PlusOne.cpp" />
