--- a/week4/week4/week4.vcxproj
+++ b/week4/week4/week4.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{1d130fe4-a1c8-475e-a05e-510d27aa3607}</ProjectGuid>
+    <ProjectGuid>{a761ba4d-1f4d-4740-9c23-32e70cdad994}</ProjectGuid>
     <RootNamespace>week4</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>thirdHomework</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,14 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="deleteDuplicatesFromLinkedList.cpp" />
-    <ClCompile Include="insertANodeInLinkedList.cpp" />
-    <ClCompile Include="mergeTwoSortedLinkedLists.cpp" />
-    <ClCompile Include="reverseLinkedListByGroups.cpp" />
-    <ClCompile Include="utils.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="utils.h" />
+    <ClCompile Include="week4.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
