--- a/week4/week4/week4.vcxproj.filters
+++ b/week4/week4/week4.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="week4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="removeElementFromLinkedList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="findMiddleOfLinkedList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="insertionSortLinkedList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ListNode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
