New solution to the third task. And creates new type of nodes for the different tasks.

--- a/fifthHomework/fifthHomework/fifthHomework.vcxproj
+++ b/fifthHomework/fifthHomework/fifthHomework.vcxproj
@@ -128,10 +128,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="checkIfBinaryTreeIsBinarySearchTree.cpp" />
-    <ClCompile Include="fifthHomework.cpp" />
+    <ClCompile Include="isThereAPathBetweenTwoNodes.cpp" />
     <ClCompile Include="verticalSumsBinaryTree.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BinaryTreeNode.h" />
     <ClInclude Include="TreeNode.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
