--- a/seventhHomework/seventhHomework/seventhHomework.vcxproj.filters
+++ b/seventhHomework/seventhHomework/seventhHomework.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="Subsequence.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="positionsWithKSum.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
