Add tasks for graphs

--- a/week10/week10/week10.vcxproj.filters
+++ b/week10/week10/week10.vcxproj.filters
@@ -27,5 +27,14 @@
     <ClCompile Include="connectionComponents.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="hasCycle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="courseSchedule.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cloneGraph.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
