--- a/week10/week10/week10.vcxproj
+++ b/week10/week10/week10.vcxproj
@@ -127,7 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cloneGraph.cpp" />
     <ClCompile Include="connectionComponents.cpp" />
+    <ClCompile Include="courseSchedule.cpp" />
+    <ClCompile Include="hasCycle.cpp" />
     <ClCompile Include="shortestReach.cpp" />
     <ClCompile Include="townJudge.cpp" />
     <ClCompile Include="week10.cpp" />
