--- a/week10/week10/week10.vcxproj.filters
+++ b/week10/week10/week10.vcxproj.filters
@@ -36,5 +36,14 @@
     <ClCompile Include="cloneGraph.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="findCenterOfStarGraph.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="isThereAPath.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="canVisitAllRooms.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
