tasks about graphs

--- a/week10/week10/week10.vcxproj
+++ b/week10/week10/week10.vcxproj
@@ -127,13 +127,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AllPathsFromSourceToTarget.cpp" />
     <ClCompile Include="canVisitAllRooms.cpp" />
     <ClCompile Include="cloneGraph.cpp" />
     <ClCompile Include="connectionComponents.cpp" />
     <ClCompile Include="courseSchedule.cpp" />
+    <ClCompile Include="edgeRemoval.cpp" />
     <ClCompile Include="findCenterOfStarGraph.cpp" />
     <ClCompile Include="hasCycle.cpp" />
     <ClCompile Include="isThereAPath.cpp" />
+    <ClCompile Include="numberOfProvinces.cpp" />
+    <ClCompile Include="santaHelper.cpp" />
     <ClCompile Include="shortestReach.cpp" />
     <ClCompile Include="townJudge.cpp" />
     <ClCompile Include="week10.cpp" />
