--- a/final_exam_preparation/final_exam_preparation/final_exam_preparation.vcxproj
+++ b/final_exam_preparation/final_exam_preparation/final_exam_preparation.vcxproj
@@ -127,21 +127,28 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bellman_ford.cpp" />
     <ClCompile Include="best_seller_by_time.cpp" />
     <ClCompile Include="birthday_party.cpp" />
     <ClCompile Include="brothers_fight.cpp" />
     <ClCompile Include="cheapest_road.cpp" />
     <ClCompile Include="childrens_sum.cpp" />
     <ClCompile Include="closest_element.cpp" />
-    <ClCompile Include="color_tree.cpp" />
+    <ClCompile Include="coloring_tree.cpp" />
     <ClCompile Include="components_with_size_divisible_by_k.cpp" />
+    <ClCompile Include="cutting_edges.cpp" />
+    <ClCompile Include="cycles_in_graph.cpp" />
+    <ClCompile Include="kruskal.cpp" />
     <ClCompile Include="linked_list_numbers_sum.cpp" />
     <ClCompile Include="list_ADT.cpp" />
     <ClCompile Include="maximum_path_in_matrix.cpp" />
     <ClCompile Include="pancakes.cpp" />
+    <ClCompile Include="prim.cpp" />
+    <ClCompile Include="road_check.cpp" />
     <ClCompile Include="searching_algorithms.cpp" />
     <ClCompile Include="shortest_routes_to_colleagues.cpp" />
     <ClCompile Include="sorting_algorithms.cpp" />
+    <ClCompile Include="dijkstra.cpp" />
     <ClCompile Include="stack_and_queue.cpp" />
     <ClCompile Include="unique_rows.cpp" />
   </ItemGroup>
